--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>TEST Page</h1>
-    <script src="/static/js/jquery.min.js></script>
+    <script src="./static/js/jquery.min.js></script>
+    <base href="http://127.0.0.1:8000">
 </body>
 </html>
