--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
     <h1>TEST Page</h1>
-    <script src="./static/js/jquery.min.js></script>
-    <base href="http://127.0.0.1:8000">
+    <<script src="./static/js/jquery.min.js></script>
 </body>
 </html>
