--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>TEST Page</h1>
-    <<script src="./static/js/jquery.min.js></script>
+    <!-- <script src="./static/js/jquery.min.js></script> -->
 </body>
 </html>
